hphp/hack/test/typecheck/return_mismatch/return_with_and_without_expr4.php.exp
File "return_with_and_without_expr4.php", line 6, characters 5-14:
You cannot return a value (Typing[4084])
  File "return_with_and_without_expr4.php", line 4, characters 25-28:
  This is a `void` function
File "return_with_and_without_expr4.php", line 6, characters 12-13:
Invalid return type (Typing[4110])
  File "return_with_and_without_expr4.php", line 4, characters 25-28:
  Expected `void`
  File "return_with_and_without_expr4.php", line 6, characters 12-13:
  But got `int`
File "return_with_and_without_expr4.php", line 4, characters 1-86:
This function can exit with and without returning a value (Typing[4421])
  File "return_with_and_without_expr4.php", line 6, characters 5-14:
  Returning a value here.
  File "return_with_and_without_expr4.php", line 8, characters 5-11:
  Returning without a value here
